# NcnnMultiPlatformProject

./: .gitmodules  CMakeLists.txt  README.MD
ExternalLibs/ncnn_prebuilt/armv7/generated_include/: layer_declaration.h  layer_registry.h
ExternalLibs/ncnn_prebuilt/jetson/: original.txt
ExternalLibs/ncnn_prebuilt/tools/linux/: mxnet2ncnn  ncnn2mem
ExternalLibs/ncnn_prebuilt/x64_linux/generated_include/: layer_declaration.h  layer_registry.h
ExternalLibs/ncnn_prebuilt/x64_vs2017/: ncnn.lib
ExternalLibs/ncnn_prebuilt/x64_vs2017/generated_include/: layer_declaration.h  layer_registry.h  layer_shader_registry.h  layer_shader_spv_data.h  layer_type_enum.h  platform.h
MyNcnnProject/: CMakeLists.txt  Main.cpp  TestVulkan.cpp
NcnnSimpleProject/: CMakeLists.txt  Main.cpp
cmakes/: JETSON_NATIVE.cmake  RASPI_CROSS.cmake  RASPI_NATIVE.cmake
resource/: ncnn_mnist.param  ncnn_mobilenet.param
unused_converters/: keras_to_onnx.py  keras_to_onnx2.py  keras_to_tensorflow.py
